--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,30 @@ group 'com.kadir.twitterbots'
 apply plugin: 'java'
 
 sourceCompatibility = 1.8
+compileJava.options.encoding = 'UTF-8'
 
 repositories {
-    mavenCentral()
+  mavenCentral()
+}
+
+jar {
+  manifest {
+    attributes('Main-Class': 'com.kadir.twitterbots.crocodile.Crocodile')
+  }
+}
+
+task run(type: JavaExec) {
+  group = 'Run'
+  description = 'Deletes tweets'
+
+  classpath sourceSets.main.runtimeClasspath
+  main = "com.kadir.twitterbots.crocodile.Crocodile"
 }
 
 dependencies {
-    compile project(":bot-authenticator")
-    compile project(":rate-limit-handler")
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+  implementation 'com.kadir.twitterbots.commons:bot-authenticator:1.0'
+  implementation 'com.kadir.twitterbots.commons:rate-limit-handler:1.0'
+  compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.7'
+  compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+  testCompile group: 'junit', name: 'junit', version: '4.12'
 }
